--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>MusicSearch</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
@@ -10,8 +11,8 @@
   <header>
     <h1> Eargasm </h1>
     <div id="sign_in_out">
-      <%= link_to "Sign In", user_session_path, :method => :post %>
-      <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+<!--       <%= link_to "Sign In", user_session_path, :method => :post %>
+      <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %> -->
     </div>
   </header>
 
