--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
   <header>
     <h1> Eargasm </h1>
     <div id="sign_in_out">
-<!--       <%= link_to "Sign In", user_session_path, :method => :post %>
-      <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %> -->
+      <%= link_to "Sign In", user_session_path, :method => :post %>
+      <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
     </div>
   </header>
 
