Enable youtube playlist and loop.

--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -13,5 +13,7 @@ Top Tracks:
 <p>
 
 <iframe id="ytplayer" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/<%= @response.top_video %>?autoplay=1"
+  src="http://www.youtube.com/v/<%= @response.top_video %>?version=3&autoplay=1&loop=1&playlist=zK1mLIeXwsQ,t7RyZ4Zf4Dk"
   frameborder="0"/>
+
+  
