--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
   <header>
     <h1>  <%= link_to 'Eargasm', root_path %> </h1>
   <div id="sign_in_out">
-      <%= link_to "Sign In", user_session_path, :method => :post %>
+    <% if user_signed_in? %>
       <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+    <% else %>
+      <%= link_to "Sign In", user_session_path, :method => :post %>
       <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+    <% end %>
     </div>
   </header>
 
