Add facebook route.

--- a/app/views/searches/index.erb
+++ b/app/views/searches/index.erb
@@ -1,8 +1,19 @@
-<form action="/search" method="get">  
-  
-
-  <input type="text" name="q" autofocus="" placeholder="Artist">
-  
+<% unless !!@current_user %>
+  <form action="/search" method="get">  
+  <input type="text" name="q" autofocus="" placeholder="Artist"> 
   <br>
   <button class="btn btn-primary btn-large">Search</button>
 </form>
+
+
+<% else %>
+  <%= form_tag("/facebook", :method => "get") do %>
+  <h2> Welcome back, <%= @current_user.name %>!!! </h2>
+    <%= submit_tag("My FaceBook Likes", :class => 'btn btn-primary btn-large')%>
+  <% end %>
+    <form action="/search" method="get">  
+  <input type="text" name="q" autofocus="" placeholder="Artist"> 
+  <br>
+  <button class="btn btn-primary btn-large">Search</button>
+</form>
+<% end %>
