--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
     <h1>  <%= link_to 'Eargasm', root_path %> </h1>
   <div id="sign_in_out">
     <% if user_signed_in? %>
-      <p><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+
+      <img src='<%= @profile_pic %>'>
+
+      <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
     <% else %>
-      <p><%= link_to "Sign Up", new_user_registration_path %>
-      <p><%= link_to "Sign In", user_session_path, :method => :post %>
       <p><%= link_to "Sign In with Facebook", user_omniauth_authorize_path(:facebook) %>
     <% end %>
     </div>
