Add search form on facebook liked page.

--- a/app/views/searches/facebook.html.erb
+++ b/app/views/searches/facebook.html.erb
@@ -1,3 +1,9 @@
+  <form action="/search" method="get">  
+  <input type="text" name="q" autofocus="" placeholder="Artist"> 
+  <br>
+  <button class="btn btn-primary btn-large">Search</button>
+</form>
+
 <div class="facebook">
 <h2>"Liked" Music on FaceBook</h2>
   <% @music.each_with_index do |artist| %>
