Refactor views by making a search form partial. Also fixed indentations.

--- a/app/views/searches/facebook.html.erb
+++ b/app/views/searches/facebook.html.erb
@@ -1,8 +1,4 @@
-  <form action="/search" method="get">  
-  <input type="text" name="q" autofocus="" placeholder="Artist"> 
-  <br>
-  <button class="btn btn-primary btn-large">Search</button>
-</form>
+<%= render 'searchform' %>
 
 <div class="facebook">
 <h2>"Liked" Music on FaceBook</h2>
