--- a/app/views/searches/index.erb
+++ b/app/views/searches/index.erb
@@ -1,8 +1,4 @@
-  <form action="/search" method="get">  
-  <input type="text" name="q" autofocus="" placeholder="Artist"> 
-  <br>
-  <button class="btn btn-primary btn-large">Search</button>
-</form>
+<%= render 'searchform' %>
 
 
 <% if !!@current_user %>
