--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,8 +1,4 @@
-  <form action="/search" method="get">  
-  <input type="text" name="q" autofocus="" placeholder="Artist"> 
-  <br>
-  <button class="btn btn-primary btn-large">Search</button>
-</form>
+<%= render 'searchform' %>
 
 You searched for: <h2>"<span><%= @query %></span>"</h2>
 
