--- a/app/views/searches/sorry.html.erb
+++ b/app/views/searches/sorry.html.erb
@@ -2,11 +2,4 @@
 <h4>Try another artist!</h4>
 
 <br/>
-<form action="/search" method="get">  
-  
-
-  <input type="text" name="q" autofocus="" placeholder="Artist">
-  
-  <br>
-  <button class="btn btn-primary btn-large">Search</button>
-</form>
+<%= render 'searchform' %>
